// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`catchRevalidateError should handle revalidation error 1`] = `
[
  [
    "Could not revalidate entityId: %s with cache key: %s
",
    "entityId",
    "entryKey",
    [Error: test],
  ],
]
`;

exports[`catchRevalidateError should log errors when clearing flags fail 1`] = `
[
  [
    "Could not revalidate entityId: %s with cache key: %s
",
    "entityId",
    "entryKey",
    [Error: test],
  ],
  [
    "Error while clearing revalidation flags for cache key: %s",
    "entryKey",
    [Error: revalidation],
  ],
]
`;

exports[`revalidateEntry should log at debug level start and success 1`] = `
[
  [
    "Revalidating entityId: %s with cache key: %s",
    "model:Foo",
    "entryKey",
  ],
  [
    "Resolve entryKey: %s with entityId: %s",
    "entryKey",
    "model:Foo",
  ],
]
`;

exports[`revalidateSuccess should remove local flag and add debug log 1`] = `
[
  [
    "Successful revalidation entityId: %s with cache key: %s",
    "entityId",
    "entryKey",
  ],
]
`;

exports[`updateSWREntry should add stale entry 1`] = `
[
  [
    "Updating cache key: %s with new stale value",
    "entryKey",
  ],
]
`;
